fixed horizontal alignment of nav

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ nav {
 }
 
 nav ul {
+    margin: 0;
     margin-left: 10%;
 }
 
